--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -2,11 +2,18 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="20dp">
+    android:padding="20dp"
+    android:orientation="vertical">
 
     <Button
         android:id="@+id/mvp_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="mvp示例"/>
+    <Button
+        android:id="@+id/touch_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="touchEvent示例"/>
 </LinearLayout>
+
