--- a/app/src/main/res/layout/activity_fresco.xml
+++ b/app/src/main/res/layout/activity_fresco.xml
@@ -2,13 +2,15 @@
 <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/black">
+    android:layout_height="match_parent">
 
-    <com.serbad.androidexample.video.MyStandardGSYVideoPlayer
-        android:id="@+id/video_view"
+    <com.facebook.drawee.view.SimpleDraweeView
+        android:id="@+id/thumb_view"
         android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
+
+        android:background="#000000"
+
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
